@@ -2,6 +2,7 @@
 
 	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
 	* kern.cc: clear undo when emptying text buffer.
+	* mainmenu.cc: leave bare minimum - the menu is loaded from file.
 
 2004-05-18  lav
 
